--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
