--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
+    "formik": "^2.2.9",
     "next": "12.2.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
