--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^7.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.3.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "sass": "^1.53.0"
